# jlib

./: README.md
include/: jlib.h
src/: CMakeLists.txt  jlib.c  test1.c  test2.c
tests/: CMakeLists.txt  test1.c  test3.c
